fixed styling for mobile devices where keyboard was cut off and required user to scroll down a bit

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ html, body{
 
 .container{
 
-    /*height: 100%;*/
+    height: 100%;
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -41,6 +41,7 @@ header{
 
 #board{
     display: grid;
+
     grid-template-columns: repeat(5, 1fr);
     grid-gap: 5px;
     padding: 10px;
@@ -102,9 +103,9 @@ header{
     background-color: whitesmoke;
 }
 
-.header{
-    margin-bottom: 2rem;
-}
+/*.header{*/
+/*    margin-bottom: 2rem;*/
+/*}*/
 
 .reset{
     margin-top: 2rem;
